Return a graph not relaxed yet